2007-09-06  Albert Chu <chu11@llnl.gov>

	* bmc-config/src/bmc-config-sections.h,
	pef-config/src/pef-config-sections.h: Add section_name parameter
	to comment callback.

	* ipmi-sensors, ipmi-sel, ipmi-fru: Fix seg-fault possibility
	corner case.

	* ipmipower/: Remove debug statement.  Output debug command in
	prompt menus.

	* common/src/cmdline-parse-common.h (parse_authentication_type):
	Fix parsing bug.
	
2007-09-05  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/: Move behavior_flags into
	engine_config.

	* bmc-config/src/bmc-config-commit.c (bmc_commit_file): Output
	invalid commit error message by default, not in verbose mode.

	* bmc-config/, configure.ac, freeipmi.spec.in: Remove
	bmc-autoconfig.

	* Update FSF address throughout.  Make address consistent
	throughout for easier search/replace later.

	* Various manpage and documentation updates.

	* bmc-config/src/bmc-user-sections.c (bmc_user_section_get):
	Comment out username for user id 1, since that typically isn't
	modifiable.

	* bmc-config/, pef-config/: Re-architect sections for support of
	section comments.
	
2007-09-04  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/: Move workaround_flags from
	protocol_config to ipmi_config.  Move LOCK_MEMORY from a security
	flags to an engine_flag.  Rename security flags to behavior flags.

	* ipmiconsole/ipmiconsole.8.pre.in: Add encryption documentation
	info on the cipher suite id.

	* bmc-config/bmc-config.8.pre.in: Re-order documentation.
	
2007-09-01  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/: Adjust callback parameters for
	more generic use.

	* configure.ac: Check for threads support in gcrypt.
	
2007-08-31  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole.c
	(ipmiconsole_engine_submit_block): Fix fd leak corner case.
	
2007-08-30  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/, ipmiconsole/, common/doc: Change ASUS ipmi 2.0